fixed white space

--- a/css.css
+++ b/css.css
@@ -5,21 +5,24 @@
 
 body {
     border-top: 50px;
+    margin: 0px;
 }
 
 .outside {
-    background: #efe0cb url("backgroundimp.jpg") repeat fixed top center;
+    background: #efe0cb url("backgroundimp.jpg") repeat fixed;
+    margin: 0px;
 }
 
 .container {
-    margin-top: 10px;
+    margin: 0px;
     background-color: #efe0cb;
+    display: inline-block;
     width: 60%;
     position: relative;
-    left: 30%;
+    left: 20%;
     display: block;
     box-shadow: 0 0 40px rgb(0 0 0 / 50%);
-    margin-bottom: 10px;
+
     padding: 25px;
 }
 
@@ -77,12 +80,14 @@ td {
 
 table {
     border: 5px solid black;
+    table-layout: fixed;
+    width: 60%;
+    margin: 0px;
 }
 
 th {
     text-align: left;
     background-color: rgb(120, 119, 119);
-    width: 100px;
 }
 
 td {
@@ -90,7 +95,7 @@ td {
 }
 
 .timeColumn {
-    width: auto;
+    width: 10%;
 }
 
 .commute {
@@ -124,9 +129,12 @@ tr:nth-child(even) {
 }
 .schedule {
     position: relative;
-    left: 15%;
+    left: 20%;
+    width: 100%;
+    margin: 0px;
 }
 .schedule h2 {
-    position: relative;
-    left: 25%;
+    text-align: center;
+    width: 60%;
+    margin: 12px, 0px, 20px;
 }
